linked together and fixed legend. still dont know how to fix textwrap

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 html, body {
     width: 100%;
     height: 100%;
+
 }
 
 .container {
@@ -32,9 +33,21 @@ div {
 
 #tooltip {
     position: absolute;
-    color: white;
-    background-color: black;
+    color: black;
+    background-color: white;
     padding: 3px;
     border-radius: 5px;
     text-align: left;
+    font-size: 30px;
+    margin: 0 auto;
+    text-align: center;
 }
+
+a {
+    padding: 10px;
+}
+
+a:active {
+    color: gray;
+}
+
